refactor: update subtitle

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     {
       "name": "preview-animation",
       "title": "Preview Animation",
-      "subtitle": "Preview a Lottie or Rive Animation file Selected in Finder",
+      "subtitle": "Preview a Lottie or Rive Animation",
       "description": "Quickly preview animation files in selected in Finder. Supports Lottie (JSON and dotLottie) and Rive files.",
       "mode": "no-view"
     }
