--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "build:swift": "swift build --configuration=release && cp .build/release/rc-motion-preview ./assets/bin/rc-motion-preview",
-    "build": "npm run build:swift && ray build -e dist",
+    "build": "ray build -e dist",
     "dev": "ray develop",
     "fix-lint": "ray lint --fix",
     "lint": "ray lint",
